this.gifUrl = `${environment.apiUrl}${response.outputFilePath}`;

--- a/frontend/src/app/upload/upload.component.html
+++ b/frontend/src/app/upload/upload.component.html
@@ -1,6 +1,9 @@
 <div class="upload-container">
   <input type="file" (change)="onFileSelected($event)" accept="video/mp4" />
   <button (click)="onUpload()">Convert</button>
+  <div class="convertedGif">
+    <a *ngIf="gifUrl" [href]="gifUrl" download="converted.gif">Download GIF</a>
+  </div>
   <div *ngIf="message" class="error">
     {{ message }}
   </div>
